# Placid

./: CMakeLists.txt  build.sh  deps.sh  download_stb.sh  imgui.ini  map.pcd  run.sh  setup.sh
.cache/clangd/index/: Camera.h.E20804591C3A2788.idx  EditorApp.cpp.FF52BA0EFF6293D5.idx  EditorApp.h.262E9C2E1AC35767.idx  GameMode.cpp.FAACB534A3E93CD5.idx  GameMode.h.AD81C8B03B419350.idx  GameScene.h.8D7037CC9EC82ED2.idx  HERO.h.FE6C9F65140486EE.idx  KeybindManager.h.075F0BFD22F5ADE6.idx  Lobby.h.772EACFA0600EB01.idx  LocalPlayer.h.F713A8F84E9502EF.idx  MainMenu.h.7C5E7904494C19F9.idx  MapEditor.h.B36FAD5B660ACAB0.idx  NetworkManager.h.F45EE565AC69147C.idx  PCD.h.9EA035FB2C17E9A1.idx  PCDBrushFactory.h.C0259BE4AD4B68AD.idx  PCDEditorState.h.7FB4A34E65BC1819.idx  PCDEditorUI.h.5EE87B15ABBE3477.idx  PCDFile.h.E340DB28E89EB090.idx  PCDFormat.h.0029C950D42BBD8B.idx  PCDTypes.h.9B50FDCE7A1CDCA2.idx  PlayerController.h.648EEEC690070B4A.idx  RemotePlayer.h.7D3B2D7A71DAE785.idx  Renderer.cpp.C2A6C578A89A4EB4.idx  Renderer.h.4B59FEE40C9DAE3E.idx  Server.h.F28148DA801AB4CF.idx  TextureLoader.h.D972B57B66A39526.idx  gl.c.476454909562DE12.idx  gl.h.18CB3222097C0959.idx  imconfig.h.382ECE4813F58A62.idx  imgui.cpp.16B92842C9508D49.idx  imgui.h.71EDF5121BE8FF8E.idx  imgui_demo.cpp.5E292AD5B25B5157.idx  imgui_draw.cpp.40720F8855D23E6A.idx  imgui_impl_glfw.cpp.86FA2303EB19141B.idx  imgui_impl_glfw.h.12DDC323BD984CA5.idx  imgui_impl_opengl3.cpp.C9816377BE28B5F7.idx  imgui_impl_opengl3.h.054C79261B4696AD.idx  imgui_impl_opengl3_loader.h.8B8D5506EA388913.idx  imgui_internal.h.213F3120C89FAC01.idx  imgui_tables.cpp.6083BBF450A65FDC.idx  (+9 more)
Assets/maps/: testing.pcd
Docs/: MapEditor.md
TrenchBroom/: Placid.fgd  config.json
include/: HERO.h  Server.h
include/Engine/: Camera.h  EditorApp.h  GameMode.h  MapEditor.h  MapLoader.h  PCD.h  PCDFormat.h  Renderer.h  TextureLoader.h
include/Game/: GameScene.h  KeybindManager.h  Lobby.h  LocalPlayer.h  MainMenu.h  Player.h  PlayerController.h  RemotePlayer.h
include/Network/: NetworkManager.h
include/PCD/: PCDBrushFactory.h  PCDEditorState.h  PCDEditorUI.h  PCDFile.h  PCDTypes.h
include/glad/: gl.h
src/: Editor.cpp  EditorApp.cpp  GameMode.cpp  GameScene.cpp  LocalPlayer.cpp  Renderer.cpp  TextureLoader.cpp  main.cpp  simple_hero_test.cpp  test_network.cpp
